# Sunhacks-25

./: .gitignore  README.md  package-lock.json
back-end/: .env  .gitignore  README.md  data.db  db.py  main.py  pyproject.toml  temp_jwt.py  test_admin.py
back-end/app/: __init__.py  db.py  main.py
back-end/app/ai/: __init__.py  api_example.py  conversation_api.py  llm.py  llm_schema.py  prompts.py
back-end/app/api/v1/: api.py  dependencies.py
back-end/app/api/v1/endpoints/: auth.py  users.py
back-end/app/core/: auth.py  config.py
back-end/app/crud/: __init__.py  crud_user.py
back-end/app/db/: base_class.py  init_db.py  session.py
back-end/app/models/: __init__.py  llm_schemas.py  user.py
back-end/app/routes/: __init__.py  auth.py  chat.py
back-end/app/schemas/: user.py
front-end/: package-lock.json
front-end/src/: App.css  App.js  index.css
front-end/src/components/: Chat.css  Chat.js  EmailLogin.css  EmailLogin.js  Header.css  Header.js  Homepage.css  Homepage.js  Login.css  Login.js  PasswordLogin.css  PasswordLogin.js  SignUp.css  SignUp.js
front-end/src/services/: api.js
sunhacks25/: package.json
sunhacks25/src/: App.css
